# OSImageAnalysis

./: .gitattributes  .gitignore  ImageJ - Shortcut.lnk  README  h  pull-it.sh  push-it.sh  rev
ImageJ/: AnaLatex.ijm  BX-61-Cal-Values-px-per-mm.txt  Scale_To8.java  Shading_Correct.java  fiji-plug-in-dev.html  fiji-plug-in-dev.md  macros - Shortcut.lnk  useful-urls.txt
R/: anaClumpedAgX.R  nuclEBImage.R  testImageJfromR.R
R-ppt/: testPP.R
csv/: George.csv
dtsa2/: index.Rmd
gnuplot/: Readme.html  Readme.md  log-y.plt  proc-gnuplot.sh  symb.plt
images/: George.tif  George.txt  Stack.tif  blobs-size.csv  cross-grating.csv  cross-grating.tif  latex-cr.tif  latex-size.csv  latex.tif  latex.txt  lena-gray.tif  lena-std.tif  line-rot.tif  line.tif  mandrill-gray.tif  model-agglomerate-size.csv  model-agglomerates.tif  noz-with-Fiji-metadata.tif  noz-with-SIS-metadata.tif
itk/shadecorrect/src/: CMakeLists.txt  Readme.txt  shadecorrect16.cxx
jmHyperSpy/: jmHyperSpy.py
jrm-r-pkgs/: .RData  TO-DO.txt  bld-analab.cmd  bld-analab.sh  bld-jrmmisc.cmd  bld-jrmmisc.sh  bld-measureLines.cmd  bld-measureLines.sh  bld-rLayerPAP.cmd  bld-rLayerPAP.sh  bld-tikzDevice.cmd  clean.cmd  clean.sh  doc_rLayerPap.R  install-all-jrm-r-pkgs.cmd  install-all-jrm-r-pkgs.sh  install-pkgs.R
octave/: testRmagick.R
penepma/: 20-nm-C-coated-EagleXG.msa  Ag.mat  BiTe3.mat  Bulk-Cu-20kV-CalcZAF-GUI.in  Bulk-Cu-20kV.in  DTSA-sim-Cu-detected-20kV.msa  Ir.mat  SiO2.mat  bulk-Cu-20kV-8hrs.7z  copy-pe-spec-01.bat  make-msa-bulk-Cu-20kV-8hr.R  pe-spect-01.csv  temp.bat  test-penepma-spec.R  (+6 more)
(+921 files in other folders)
